--- a/ERP/src/classes/GUI.form
+++ b/ERP/src/classes/GUI.form
@@ -68,9 +68,6 @@
     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" id="white" palette="1" red="ff" type="palette"/>
     </Property>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[800, 600]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar"/>
@@ -113,7 +110,7 @@
               <Component id="jPanelWarehouse" alignment="1" pref="1008" max="32767" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="6" groupAlignment="0" attributes="0">
-              <Component id="jPanelFood" alignment="1" pref="1008" max="32767" attributes="0"/>
+              <Component id="jPanelFood" alignment="1" min="-2" pref="1008" max="-2" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="7" groupAlignment="0" attributes="0">
               <Component id="jPanelPartsOrders" alignment="1" pref="1008" max="32767" attributes="0"/>
@@ -226,7 +223,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButtonShowRepairs" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButtonFoodOrders" max="32767" attributes="0"/>
+                  <Component id="jButtonFoodOrders" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButtonShowWarehouse" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -547,18 +544,16 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jComboBoxLoginEmployees" alignment="0" pref="208" max="32767" attributes="0"/>
-                      <Component id="jPasswordFieldPassword" alignment="0" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jComboBoxLoginEmployees" alignment="0" pref="208" max="32767" attributes="0"/>
+                          <Component id="jPasswordFieldPassword" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <Component id="jButtonLogin" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="471" max="32767" attributes="0"/>
-                  <Component id="jButtonLogin" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="466" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -899,15 +894,17 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jScrollPaneFoodOrdered" pref="490" max="32767" attributes="0"/>
+                              <Component id="jScrollPaneFoodOrdered" max="32767" attributes="0"/>
                               <Component id="jButtonFoodQuantityDelete" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="43" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jButtonAddFoodProduct" max="32767" attributes="0"/>
-                              <Component id="jScrollPaneFoodToOrder" pref="490" max="32767" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <Component id="jButtonAddFoodProduct" pref="490" max="32767" attributes="0"/>
+                                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="jScrollPaneFoodToOrder" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jButtonOrderFood" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
@@ -932,8 +929,8 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jScrollPaneFoodToOrder" pref="366" max="32767" attributes="0"/>
-                      <Component id="jScrollPaneFoodOrdered" pref="0" max="32767" attributes="0"/>
+                      <Component id="jScrollPaneFoodToOrder" max="32767" attributes="0"/>
+                      <Component id="jScrollPaneFoodOrdered" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -952,7 +949,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
                   <Component id="jButtonOrderFood" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="261" max="32767" attributes="0"/>
+                  <EmptySpace pref="141" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
